# modern_robotics

./: .gitignore  CMakeLists.txt  README.md  main.cpp  xmake.lua
.xmake/macosx/x86_64/: xmake.conf
.xmake/macosx/x86_64/cache/: config  detect  history  package  references  toolchain
include/: modern_robotics.h
src/: modern_robotics.cpp
test/: test_fk_ik.cpp
